--- a/pom.xml
+++ b/pom.xml
@@ -497,7 +497,7 @@
                     <url>jdbc:mysql://localhost:3306/diidxavote</url>
                     <defaultSchemaName>diidxavote</defaultSchemaName>
                     <username>root</username>
-                    <password></password>
+                    <password>admin</password>
                     <referenceUrl>hibernate:spring:mx.com.dxesoft.diidxavote.domain?dialect=org.hibernate.dialect.MySQLInnoDBDialect</referenceUrl>
                     <verbose>true</verbose>
                     <logging>debug</logging>
